<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:columnCount="2"
    android:useDefaultMargins="true">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/purchasePriceEditText"
        android:layout_column="0"
        android:digits="0123456789"
        android:maxLength="10"
        android:ems="15"
        android:layout_columnSpan="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/purchasePriceTextView"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:hint="@string/enter_price"
        android:layout_gravity="fill_horizontal"
        android:background="@color/input_background"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/downPaymentAmountEditText"
        android:layout_column="0"
        android:digits="0123456789"
        android:maxLength="10"
        android:ems="15"
        android:layout_columnSpan="2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/downPaymentAmountTextView"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:hint="@string/enter_down_payment"
        android:layout_gravity="fill_horizontal"
        android:background="@color/input_background"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:id="@+id/interestRateEditText"
        android:layout_column="0"
        android:digits="0123456789"
        android:maxLength="5"
        android:ems="15"
        android:layout_columnSpan="2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/interestRateTextView"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:hint="@string/enter_interest_rate"
        android:layout_gravity="fill_horizontal"
        android:background="@color/input_background"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/get_duration"
        android:paddingTop="@dimen/label_padding"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/loan_duration"
        android:layout_gravity="center_vertical|end"/>

    <RadioGroup
        android:id="@+id/loanDurationRadioGroup"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/tenYearsRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten_years"
            android:layout_marginEnd="16dp" />

        <RadioButton
            android:id="@+id/twentyYearsRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twenty_years"
            android:layout_marginEnd="16dp" />

        <RadioButton
            android:id="@+id/thirtyYearsRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thirty_years"
            android:layout_marginEnd="16dp" />

        <RadioButton
            android:id="@+id/customYearsRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_years"
            android:layout_marginEnd="16dp" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/loan_duration_input"
        android:id="@+id/loanDurationTextView"
        android:layout_gravity="center_vertical|end"/>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="@dimen/seekbar_height"
        android:id="@+id/loanDurationSeekBar"
        android:indeterminate="false"
        android:max="50"
        android:progress="15"
        android:layout_gravity="fill_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/monthly_payment"
        android:paddingTop="@dimen/label_padding" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="7"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/monthlyPaymentTextView"
        android:layout_gravity="fill_horizontal"
        android:background="@color/result_background"
        android:gravity="start"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation"/>

</GridLayout>
